--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Chess
 spring.datasource.url=jdbc:postgresql://localhost:5432/chess
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=2037
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
